--- a/src/index.scss
+++ b/src/index.scss
@@ -7,51 +7,87 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 15px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 5px 30px;
-  gap: 15px;
+  padding: 5px 20px;
+  gap: 30px;
+  margin: 0 auto;
 }
 
-.title-container {
-  display: flex;
-  flex-direction: column;
-  font-size: 42px;
-  font-weight: font.$font-weight-bold;
+.title {
+  @include font.ResumeMainTitle;
   @include animation.fadeInSlideUp(1.5s);
   margin-bottom: 10px;
 }
 
-.title-detail-container {
+.main-paragraph {
   color: color.$Gray800;
-  font-size: font.$font-size-18;
+  font-size: font.$size-small;
   font-weight: font.$font-weight-medium;
   @include animation.fadeInSlideUp(1.5s);
+  line-height: 1.3;
 }
 
 .section-container {
   display: flex;
-  gap: 4px;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 10px;
 }
 
 .section-title {
   @include animation.fadeInSlideUp(1.5s);
-
-  font-size: font.$font-size-32;
-  font-weight: font.$font-weight-medium;
+  @include font.ResumeSectionTitle;
+  margin-bottom: 20px;
 }
 
 .section-contents-container {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  align-items: baseline;
 }
 
-.section-contents-detail {
+.section-contents-title-container {
   display: flex;
   flex-direction: column;
 }
+
+.duration-text {
+  @include font.DurationText;
+}
+
+.section-contents-title {
+  @include font.ResumeSectionDetailTitle;
+}
+
+.section-contents-detail-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+}
+
+.section-contents-detail-list {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.work-experience-detail-title {
+  font-size: font.$size-medium;
+  font-weight: font.$font-weight-medium;
+}
+
+// .skill-chip{
+
+// }
+
+// .education-status-chip {
+// }
