--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 5px 20px;
+  padding: 10px 20px;
   gap: 30px;
   margin: 0 auto;
 }
@@ -91,3 +91,30 @@
 
 // .education-status-chip {
 // }
+
+// Skill
+.test-container {
+  max-width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.track {
+  @include animation.marqueeAnimation;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 5px;
+  will-change: transform;
+}
+
+.skill-chip {
+  text-align: center;
+  min-width: 100px;
+  width: fit-content;
+  margin: 0 20px;
+  border-radius: 52px;
+  padding: 5px 15px;
+  background-color: #000;
+  color: #fff;
+}
