--- a/src/style/_animation.scss
+++ b/src/style/_animation.scss
@@ -9,7 +9,20 @@
   }
 }
 
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
 @mixin fadeInSlideUp($duration: 1s) {
   transform: translateY(10px);
   animation: fade-in-slide-up $duration ease-out forwards;
+}
+
+@mixin marqueeAnimation {
+  animation: marquee 32s linear infinite;
 }
