--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,10 @@
   padding: 5px 20px;
   gap: 30px;
   margin: 0 auto;
+  max-width: 1000px;
+  // @media screen {
+
+  // }
 }
 
 .title {
@@ -30,7 +34,7 @@
 
 .main-paragraph {
   color: color.$Gray800;
-  font-size: font.$size-small;
+  font-size: font.$pc-small;
   font-weight: font.$font-weight-medium;
   @include animation.fadeInSlideUp(1.5s);
   line-height: 1.3;
@@ -53,25 +57,45 @@
   display: flex;
   flex-direction: row;
   align-items: baseline;
+  gap: 30px;
 }
 
 .section-contents-title-container {
   display: flex;
   flex-direction: column;
+  min-width: fit-content;
+}
+
+.corp-logo {
+  width: 50px;
+}
+
+.position-text {
+  @include font.PostionText;
 }
 
 .duration-text {
   @include font.DurationText;
 }
 
+.work-experience-detail-title-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+}
+
 .section-contents-title {
   @include font.ResumeSectionDetailTitle;
+  display: flex;
+  align-items: center;
 }
 
 .section-contents-detail-container {
   display: flex;
   flex-direction: column;
   margin-left: 15px;
+  font-size: font.$pc-small;
+  gap: 15px;
 }
 
 .section-contents-detail-list {
@@ -81,8 +105,57 @@
 }
 
 .work-experience-detail-title {
-  font-size: font.$size-medium;
+  font-size: font.$pc-medium;
   font-weight: font.$font-weight-medium;
+}
+
+.work-experience-detail-content {
+  font-size: font.$pc-small;
+  flex-grow: 8;
+}
+
+.work-experience-detail-content-title {
+  font-weight: font.$font-weight-bold;
+  margin: 12px 0 8px;
+}
+
+.work-experience-detail-content-detail-list-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.work-experience-detail-content-detail-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  &::before {
+    content: "";
+    background-color: color.$Primary;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    margin-right: 4px;
+    min-width: 4px;
+    min-height: 4px;
+    max-height: 4px;
+    max-width: 4px;
+  }
+}
+
+.skill-stack-container {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+
+  & > li {
+    &:not(:last-child) {
+      &::after {
+        content: ",";
+      }
+    }
+  }
 }
 
 // .skill-chip{
