Add : Dark mode colorset

--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -9,3 +9,11 @@ $Gray200: #e8e8e8;
 $Gray100: #f4f4f4;
 
 $Primary: #4942e4;
+
+$Dark-mode-bg: #121212;
+$Dark-mode-card-bg: #404040;
+$Dark-mode-text: #ffffff;
+
+$Light-mode-bg: #ffffff;
+$Light-mode-card-bg: #b3b3b3;
+$Light-mode-text: #181818;
