--- a/src/style/_animation.scss
+++ b/src/style/_animation.scss
@@ -9,7 +9,28 @@
   }
 }
 
+// FIXME: 해당 부분 애니메이션 수정 필요
+@keyframes color-spread {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
+}
+
 @mixin fadeInSlideUp($duration: 1s) {
   transform: translateY(10px);
   animation: fade-in-slide-up $duration ease-out forwards;
+}
+
+@mixin colorSpread($bgColor: black, $textColor: white) {
+  background-color: $bgColor;
+  color: $textColor;
+  animation: color-spread 2s forwards; /* 애니메이션 적용 */
+  transform: translate(-50%, -50%);
 }
