--- a/src/index.scss
+++ b/src/index.scss
@@ -28,10 +28,7 @@ html[data-theme="light"] {
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 5px 20px;
-  gap: 30px;
-  margin: 0 auto;
-  max-width: 1000px;
+  padding: 20px 25px;
 }
 
 .screen-in {
@@ -39,15 +36,13 @@ html[data-theme="light"] {
 }
 
 .title {
-  @include font.ResumeMainTitle;
+  @include font.H1;
   margin-bottom: 10px;
 }
 
 .main-paragraph {
   color: color.$Gray800;
-  font-size: font.$pc-small;
-  font-weight: font.$font-weight-medium;
-  line-height: 1.3;
+  @include font.P1;
 }
 
 .section-container {
@@ -57,142 +52,46 @@ html[data-theme="light"] {
   margin-top: 10px;
 }
 
-.section-column-container {
-  display: flex;
-  flex-direction: column;
-  gap: 23px;
-}
-
 .section-title {
-  @include font.ResumeSectionTitle;
+  @include font.H2;
   margin-bottom: 20px;
 }
 
-.section-contents-container {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  gap: 30px;
-  min-width: 0;
-  flex-basis: auto;
+.card {
+  padding: 14px 20px;
+  background-color: color.$Gray100;
+  border-radius: 8px;
+
+  &-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+    @include font.B1;
+  }
+
+  &-title-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+
+  &-description {
+    margin-top: 9px;
+    @include font.B3;
+    line-height: 1.3;
+  }
 }
 
-.section-contents-title-container {
-  display: flex;
-  flex-direction: column;
-  min-width: fit-content;
+.position {
+  @include font.P3;
+}
+
+.duration {
+  @include font.P3;
+  color: color.$Gray500;
 }
 
 .corp-logo {
   width: 50px;
-}
-
-.github-small-logo {
-  width: 15px;
-}
-
-.position-text {
-  @include font.PostionText;
-}
-
-.duration-text {
-  @include font.DurationText;
-}
-
-.work-experience-detail-title-container {
-  display: flex;
-  flex-direction: column;
-  width: 450px;
-  justify-content: flex-start;
-}
-
-.section-contents-title {
-  @include font.ResumeSectionDetailTitle;
-  display: flex;
-  align-items: center;
-}
-
-.section-contents-detail-container {
-  display: flex;
-  flex-direction: column;
-  margin-left: 15px;
-  font-size: font.$pc-small;
-  gap: 25px;
-  min-width: 0;
-}
-
-.section-contents-detail-column-container {
-  margin-top: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.section-contents-detail-list {
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-}
-
-.work-experience-detail-title {
-  font-size: font.$pc-medium;
-  font-weight: font.$font-weight-medium;
-}
-
-.work-experience-detail-content {
-  font-size: font.$pc-small;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.work-experience-detail-content-title {
-  font-weight: font.$font-weight-bold;
-  margin: 0 0 8px;
-}
-
-.work-experience-detail-content-detail-list-container {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.work-experience-detail-content-detail-list {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  &::before {
-    content: "";
-    background-color: color.$Primary;
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    margin-right: 4px;
-    min-width: 4px;
-    min-height: 4px;
-    max-height: 4px;
-    max-width: 4px;
-  }
-}
-
-.skill-stack-container {
-  display: flex;
-  flex-direction: row;
-  gap: 4px;
-
-  & > li {
-    &:not(:last-child) {
-      &::after {
-        content: ",";
-      }
-    }
-  }
-}
-
-.spreading-color {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include animation.colorSpread(black);
 }
