--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,10 @@ html[data-theme="light"] {
   color: color.$Light-mode-text;
 }
 
+.screen-in {
+  @include animation.fadeInSlideUp(1.5s);
+}
+
 .header-container {
   display: flex;
   flex-direction: column;
@@ -31,10 +35,6 @@ html[data-theme="light"] {
   padding: 20px 25px;
 }
 
-.screen-in {
-  @include animation.fadeInSlideUp(1.5s);
-}
-
 .title {
   @include font.H1;
   margin-bottom: 10px;
@@ -45,16 +45,18 @@ html[data-theme="light"] {
   @include font.P1;
 }
 
-.section-container {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-top: 10px;
-}
+.section {
+  &-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-top: 10px;
+  }
 
-.section-title {
-  @include font.H2;
-  margin-bottom: 20px;
+  &-title {
+    @include font.H2;
+    margin-bottom: 5px;
+  }
 }
 
 .card {
