--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,10 @@
 @use "/src/style/font";
 @use "/src/style/animation";
 
+html body {
+  max-width: 100vw;
+}
+
 // THEMA
 html[data-theme="dark"] {
   background-color: color.$Dark-mode-bg;
@@ -63,6 +67,7 @@ html[data-theme="light"] {
   padding: 14px 20px;
   background-color: color.$Gray100;
   border-radius: 8px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
 
   &-title {
     display: flex;
@@ -80,7 +85,7 @@ html[data-theme="light"] {
 
   &-description {
     margin-top: 9px;
-    @include font.B3;
+    @include font.P1;
     line-height: 1.3;
   }
 }
@@ -96,4 +101,81 @@ html[data-theme="light"] {
 
 .corp-logo {
   width: 50px;
+}
+
+.project-corp-title {
+  @include font.H2;
+  font-weight: font.$font-weight-medium;
+}
+
+.project-card {
+  padding: 14px 20px;
+  background-color: color.$Gray100;
+  border-radius: 8px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+
+  &-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+    @include font.B1;
+  }
+
+  &-title-container {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+  }
+
+  &-paragraph-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-top: 9px;
+    line-height: 1.3;
+    @include font.P1;
+  }
+
+  &-paragraph-item {
+  }
+
+  &-paragraph-title {
+  }
+
+  &-paragraph-description {
+    margin-left: 8px;
+    @include font.P2;
+
+    &-list {
+      // &::before {
+      //   content: "";
+      //   display: inline-block;
+      //   vertical-align: auto;
+      //   background-color: #3a7bd5;
+      //   width: 4px;
+      //   height: 4px;
+      //   border-radius: 50%;
+      // }
+
+      list-style: disc;
+      &::marker {
+        color: #3a7bd5;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  &-paragraph-skill-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4px;
+  }
+}
+
+.skill-chip {
+  background-color: color.$Gray200;
+  border-radius: 12px;
+  padding: 4px 6px;
 }
