--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,12 @@ html[data-theme="light"] {
     margin-top: 10px;
   }
 
+  &-no-gap-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
   &-title {
     @include font.H2;
     margin-bottom: 5px;
@@ -64,10 +70,21 @@ html[data-theme="light"] {
 }
 
 .card {
-  padding: 14px 20px;
-  background-color: color.$Gray100;
-  border-radius: 8px;
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+  // padding: 14px 20px;
+  // background-color: color.$Gray100;
+  // border-radius: 8px;
+  // filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+
+  &:not(:last-child) {
+    &::after {
+      content: "";
+      display: block;
+      background-color: color.$Gray200;
+      height: 1px;
+      border-radius: 2px;
+      margin: 25px 0;
+    }
+  }
 
   &-title {
     display: flex;
@@ -87,6 +104,41 @@ html[data-theme="light"] {
     margin-top: 9px;
     @include font.P1;
     line-height: 1.3;
+  }
+
+  &-paragraph-title {
+    margin-bottom: 3px;
+    @include font.P1;
+  }
+
+  &-paragraph-description {
+    margin-left: 8px;
+    @include font.P2;
+
+    &-list {
+      // &::before {
+      //   content: "";
+      //   display: inline-block;
+      //   vertical-align: auto;
+      //   background-color: #3a7bd5;
+      //   width: 4px;
+      //   height: 4px;
+      //   border-radius: 50%;
+      // }
+
+      list-style: disc;
+      &::marker {
+        color: #3a7bd5;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  &-paragraph-skill-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4px;
   }
 }
 
@@ -141,6 +193,8 @@ html[data-theme="light"] {
   }
 
   &-paragraph-title {
+    margin-bottom: 3px;
+    @include font.P1;
   }
 
   &-paragraph-description {
@@ -178,4 +232,38 @@ html[data-theme="light"] {
   background-color: color.$Gray200;
   border-radius: 12px;
   padding: 4px 6px;
+  @include font.P3;
+}
+
+.github-small-logo {
+  width: 15px;
+}
+
+.status-chip {
+  padding: 4px;
+  border-radius: 8px;
+
+  &-inwork {
+    background-color: green;
+    border-radius: 8px;
+    padding: 3px 5px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    @include font.P3;
+    color: #fff;
+  }
+
+  &-done {
+    background-color: red;
+    border-radius: 8px;
+    padding: 3px 5px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    @include font.P3;
+    color: #fff;
+  }
 }
