--- a/src/index.scss
+++ b/src/index.scss
@@ -267,3 +267,21 @@ html[data-theme="light"] {
     color: #fff;
   }
 }
+
+// FIXME: 임시
+.pdf-button {
+  width: fit-content;
+}
+
+.pdf-container {
+  display: none;
+}
+
+.visible {
+  display: block;
+  visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
+}
