--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,16 @@ html body {
   max-width: 100vw;
 }
 
+body {
+  @media screen and (min-width: 1024px) {
+    /* Desktop */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 100px;
+  }
+}
+
 // THEMA
 html[data-theme="dark"] {
   background-color: color.$Dark-mode-bg;
@@ -19,7 +29,7 @@ html[data-theme="light"] {
 }
 
 .screen-in {
-  @include animation.fadeInSlideUp(1.5s);
+  @include animation.fadeInSlideUp(2s);
 }
 
 .header-container {
@@ -37,6 +47,17 @@ html[data-theme="light"] {
   display: flex;
   flex-direction: column;
   padding: 20px 25px;
+}
+
+.aside-container {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
+  padding: 5px 8px;
+  border-radius: 8px;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+  background-color: color.$Gray400;
 }
 
 .title {
@@ -271,6 +292,21 @@ html[data-theme="light"] {
 // FIXME: 임시
 .pdf-button {
   width: fit-content;
+  border: none;
+  cursor: pointer;
+  background-color: inherit;
+  padding: 0;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  & > img {
+    width: 20px;
+    height: 100%;
+  }
+  &:hover {
+    background-color: color.$Gray200;
+  }
 }
 
 .pdf-container {
