--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@use "/src/style/reset";
-@use "/src/style/color";
-@use "/src/style/font";
-@use "/src/style/animation";
+@use "./style/reset";
+@use "./style/color";
+@use "./style/font";
+@use "./style/animation";
 
 html body {
   max-width: 100vw;
