Revert "Modify : vite 빌드 에러 해결을 위한 디렉토리 위치 변경"
This reverts commit 9a45b0faff2cc7e8b5b0603498059d698ac5201b.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@use "./style/reset";
-@use "./style/color";
-@use "./style/font";
-@use "./style/animation";
+@use "/src/style/reset";
+@use "/src/style/color";
+@use "/src/style/font";
+@use "/src/style/animation";
 
 html body {
   max-width: 100vw;
