--- a/src/style/_font.scss
+++ b/src/style/_font.scss
@@ -1,4 +1,4 @@
-@use "./color";
+@use "/src/style/color";
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
