--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,21 @@ html[data-theme="light"] {
   padding: 20px 25px;
 }
 
+.burger-menu-button {
+  position: fixed;
+  bottom: 8px;
+  right: 4px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  z-index: 1;
+  border-radius: 4px;
+
+  & > img {
+    width: 100%;
+  }
+}
+
 .aside-container {
   position: fixed;
   bottom: 10px;
@@ -56,8 +71,32 @@ html[data-theme="light"] {
   z-index: 1;
   padding: 5px 8px;
   border-radius: 8px;
+  // FIXME: 임시
+  display: none;
+  // display: flex;
+  flex-direction: column;
+  gap: 8px;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
   background-color: color.$Gray400;
+
+  @include font.P1;
+}
+
+.aside-item {
+  width: fit-content;
+  border: none;
+  cursor: pointer;
+  background-color: inherit;
+  padding: 0;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  border-radius: 8px;
+  & > img {
+    width: 20px;
+    height: 100%;
+  }
 }
 
 .title {
@@ -286,26 +325,6 @@ html[data-theme="light"] {
     width: fit-content;
     @include font.P3;
     color: #fff;
-  }
-}
-
-// FIXME: 임시
-.pdf-button {
-  width: fit-content;
-  border: none;
-  cursor: pointer;
-  background-color: inherit;
-  padding: 0;
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  border-radius: 8px;
-  & > img {
-    width: 20px;
-    height: 100%;
-  }
-  &:hover {
-    background-color: color.$Gray200;
   }
 }
 
