--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -128,3 +128,13 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+button {
+  border: none;
+  cursor: pointer;
+  padding: 0;
+
+  &:hover {
+    background-color: inherit;
+  }
+}
