--- a/src/index.scss
+++ b/src/index.scss
@@ -53,8 +53,8 @@ html[data-theme="light"] {
   position: fixed;
   bottom: 8px;
   right: 4px;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   display: flex;
   z-index: 1;
   border-radius: 4px;
@@ -71,9 +71,7 @@ html[data-theme="light"] {
   z-index: 1;
   padding: 5px 8px;
   border-radius: 8px;
-  // FIXME: 임시
-  display: none;
-  // display: flex;
+  display: flex;
   flex-direction: column;
   gap: 8px;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
