Add : modal 동적 추가

--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -17,3 +17,5 @@ $Dark-mode-text: #ffffff;
 $Light-mode-bg: #ffffff;
 $Light-mode-card-bg: #b3b3b3;
 $Light-mode-text: #181818;
+
+$Dimmed: rgba(105, 105, 105, 0.6);
