--- a/src/index.scss
+++ b/src/index.scss
@@ -51,51 +51,19 @@ html[data-theme="light"] {
   padding: 20px 25px;
 }
 
-.burger-menu-button {
+.aside-toggle-button {
   position: fixed;
   bottom: 8px;
   right: 4px;
   width: 20px;
   height: 20px;
   display: flex;
+
   z-index: 1;
   border-radius: 4px;
 
   & > img {
     width: 100%;
-  }
-}
-
-.aside-container {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  z-index: 1;
-  padding: 5px 8px;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
-  background-color: color.$Gray400;
-
-  @include font.P1;
-}
-
-.aside-item {
-  width: fit-content;
-  border: none;
-  cursor: pointer;
-  background-color: inherit;
-  padding: 0;
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  border-radius: 8px;
-  & > img {
-    width: 20px;
-    height: 100%;
   }
 }
 
