--- a/src/style/_aside.scss
+++ b/src/style/_aside.scss
@@ -18,19 +18,37 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: color.$Dimmed;
+  //   background-color: color.$Dimmed;
 }
 
 .aside-contents {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
   display: flex;
+  padding: 5px 8px;
+  border-radius: 8px;
+  gap: 5px;
   flex-direction: column;
-  width: 100px;
-  height: 50px;
   background-color: #fff;
   z-index: 1000;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
   @include font.P1;
+}
+
+.aside-item {
+  width: fit-content;
+  border: none;
+  cursor: pointer;
+  background-color: inherit;
+  padding: 0;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  border-radius: 8px;
+  & > img {
+    width: 20px;
+    height: 100%;
+  }
 }
