--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,7 @@ html[data-theme="light"] {
 }
 
 .screen-in {
-  @include animation.fadeInSlideUp(2s);
+  @include animation.fadeInSlideUp(1s);
 }
 
 .header-container {
@@ -144,17 +144,8 @@ html[data-theme="light"] {
     @include font.P2;
 
     &-list {
-      // &::before {
-      //   content: "";
-      //   display: inline-block;
-      //   vertical-align: auto;
-      //   background-color: #3a7bd5;
-      //   width: 4px;
-      //   height: 4px;
-      //   border-radius: 50%;
-      // }
-
       list-style: disc;
+
       &::marker {
         color: #3a7bd5;
         border-radius: 50%;
@@ -193,6 +184,7 @@ html[data-theme="light"] {
   background-color: color.$Gray100;
   border-radius: 8px;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
+  page-break-before: always;
 
   &-title {
     display: flex;
@@ -241,6 +233,8 @@ html[data-theme="light"] {
       // }
 
       list-style: disc;
+      margin-bottom: 3px;
+
       &::marker {
         color: #3a7bd5;
         border-radius: 50%;
