Modify : 버튼 기본 적용 스타일 reset 및 a 태그 폰트 색상 지정

--- a/src/style/_aside.scss
+++ b/src/style/_aside.scss
@@ -47,6 +47,8 @@
   align-items: center;
   gap: 6px;
   border-radius: 8px;
+  color: color.$Gray900;
+
   & > img {
     width: 20px;
     height: 100%;
