--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -133,6 +133,7 @@ button {
   border: none;
   cursor: pointer;
   padding: 0;
+  background-color: inherit;
 
   &:hover {
     background-color: inherit;
