--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,15 @@
 @use "/src/style/modal";
 @use "/src/style/aside";
 
+@mixin safe-area-padding {
+  @supports (padding: env(safe-area-inset-top)) {
+    padding-top: calc(20px + env(safe-area-inset-top));
+    padding-right: calc(25px + env(safe-area-inset-right));
+    padding-bottom: calc(20px + env(safe-area-inset-bottom));
+    padding-left: calc(25px + env(safe-area-inset-left));
+  }
+}
+
 html body {
   max-width: 100vw;
 }
@@ -49,6 +58,8 @@ html[data-theme="light"] {
   display: flex;
   flex-direction: column;
   padding: 20px 25px;
+
+  @include safe-area-padding;
 }
 
 .aside-toggle-button {
@@ -98,11 +109,6 @@ html[data-theme="light"] {
 }
 
 .card {
-  // padding: 14px 20px;
-  // background-color: color.$Gray100;
-  // border-radius: 8px;
-  // filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
-
   &:not(:last-child) {
     &::after {
       content: "";
