--- a/src/index.scss
+++ b/src/index.scss
@@ -120,7 +120,28 @@ html[data-theme="light"] {
 }
 
 .contact-item {
+  @include font.P1;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  // font-weight: font.$font-weight-small;
+
+  &-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.contact-info {
+  @include font.P3;
+  color: color.$Gray500;
+  margin: 5px 0 8px;
+}
+
+.contact-list-item-text {
+  cursor: pointer;
 }
 
 .card {
