--- a/src/style/_toast.scss
+++ b/src/style/_toast.scss
@@ -1,12 +1,38 @@
-#toast {
-  display: fixed;
-  bottom: 10px;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: fit-content;
-  background-color: #fff;
-  border-radius: 8px;
+@use "/src/style/color";
+@use "/src/style/font";
+@use "/src/style/animation";
 
-  z-index: 10000;
+#toast {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 10px;
+  width: calc(100% - 20px);
+  height: fit-content;
+  background-color: #333333;
+  color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  margin: 0 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+  animation: fadeIn 0.5s ease-in-out 0.5s 2.5s;
+}
+
+.toast-contents {
+  @include font.B3;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-weight: font.$font-weight-small;
+  padding: 6px 8px;
+  border-radius: 8px;
+}
+
+.toast-close-btn {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  color: #ffffff;
 }
