--- a/src/style/_toast.scss
+++ b/src/style/_toast.scss
@@ -15,8 +15,11 @@
   border-radius: 8px;
   margin: 0 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  @include animation.fadeIn(1s);
+}
 
-  animation: fadeIn 0.5s ease-in-out 0.5s 2.5s;
+.toast-close {
+  @include animation.fadeOut(1s);
 }
 
 .toast-contents {
