Modify : toast 컴포넌트 애니메이션 추가 - 버그 존재

--- a/src/style/_toast.scss
+++ b/src/style/_toast.scss
@@ -18,6 +18,11 @@
   @include animation.fadeIn(1s);
 }
 
+.toast-modal {
+  width: fit-content !important;
+  height: fit-content !important;
+}
+
 .toast-close {
   @include animation.fadeOut(1s);
 }
